@startuml Vete++

scale 1280 width
scale 1550 height

Person <|-- Client
Person <|-- Vet

class Person {
 -personId: int
 -name: string
 -lastName: string
 +setName(name: string): void
 +setLastname(lastname: string): void
 +getName(): string
 +getLastname(): string
 +load(): void
}

class Vet {
 -vetId: int
 -speciality: string
 +setIdVet(idVet: int): void
 +setSpeciality(speciality: string): void
 +getIdVet(): int
 +getSpeciality(): string

 +queryHistory(): void
 +assignTreatment(): void
 +issueDiagnosis(): void
 +load(): void
}

class Client {
 -clientId: int
 -address: string
 -phone: string
 -email: string
 +setId(id: int): void
 +setAddress(address: string): void
 +setPhone(phone: string): void
 +setEmail(email: string): void
 +getAddress(): string
 +getPhone(): string
 +getEmail(): string
 +getId(): int

 +addPet():void
 +deletePet(): void
 +queryHistory(): void
 +makeAppointment(): void
 +queryPets(): void
 +load(): void
}

'newpage

class Appointment {
 -appId: int
 -date: Date
 -time: Time
 -urgencyCat: int
 -reason: string
 -attended: bool
 -clientId: int
 -petId: int

 +setAppId(id: int): void
 +setDate(date: Date): void
 +setTime(time: Time): void
 +setUrgencyCat(cat: int): void
 +setReason(reason: string): void
 +setAttended(attended: bool): void
 +getAppId(): int
 +getDate(): Date
 +getTime(): Time
 +getUrgencyCat(): int
 +getReason(): string
 +getAttended(): bool
 
 +load(): void
}

class VetVisits {
 -visitId: int
 -date: Fecha
 -reason: string
 -diagnosis: string
 -vetId: int   
 -clientId: int
 -petId: int
 -saleId: int

 +setVisitId(id: int): void
 +setDate(fecha: Fecha): void
 +setReason(reason: string): void
 +setDiagnosis(diagnosis: string): void
 +setVetId(id: int): void
 +setClientId(id: int): void
 +setPetId(id: int): void
 +getVisitId(): int
 +getDate(): Fecha
 +getReason(): string
 +getDiagnosis(): string
 +getVetId(): int
 +getClientId(): int
 +getPetId(): int

 +isValidRelation(): bool
}

class Pet {
 -petId: int
 -name: string
 -specie: string
 -breed: string
 -birthDate: Fecha
 -ownerId: int
 -currentDiagnosis: string

 +setPetId(petId:int):void
 +setName(name: string): void
 +setSpecie(specie: string):void
 +setBreed(breed: string): void
 +setDate(date: Fecha): void 
 +setOwnerId(id: int):void
 +setCurrentDiagnosis(diagnosis:string):void 
 +getPetId(): int
 +getName(): string
 +getSpecie(): string
 +getBreed():string
 +getDate():Fecha

 +addAppoinment(): void
 +load():void
 +recordVaccination(): void
}

class PetRelations {
 -petId: int
 -clientId: int
 -owner: bool

 +setPetId(id: int): void
 +setClientId(id: int): void
 +setOwner(owner: bool): void
 +getPetId(): int
 +getClientId(): int
 +getOwner(): bool
}

'newpage

class Product {
 -productId: int
 -productName: string
 -description: string
 -quantity: int 
 -stock: int
 -price: float
 -brand: string
 -productType:string 
 -productCategory: Category

 +setProductId(id: int): void
 +setName(name:string): void
 +setDescription(description: string): void
 +setQuantity(qty: int): void
 +setStock(stock:int): void
 +setPrice(price:float): void
 +setBrand(brand: string): void
 +setProductType(type: string): void
 +setProductCategory(cat: Category): void
 
 +getProductId(): int
 +getName(): string
 +getQuantity(): int
 +getStock(): int
 +getPrice(): float
 +getBrand():string
 +getProductType(): string
 +getProductCategory(): Category
 
 +addProduct(): void
 +DeleteProduct(): void
 +updateStock(): void
}

class ProductCategory {
 -catId: int
 -catName: string
 +setCatId(id: int): void
 +setCatName(name: string): void
 +getCatId(): int
 +getCatName(): string

 +load(): void
}

class Date {
 -day: int
 -month:int
 -year: int

 +setDay(day: int): void
 +setMonth(month: int): void
 +setYear (year: int): void
 +getDay(): int
 +getMonth(): int
 +getYear(): int
}

class Time {
 -hour: int
 -min:int
 -sec: int

 +setHour(hour: int):void
 +setMin(min: int): void
 +setSec (sec: int): void
 +getHour(): int
 +getMin(): int
 +getSec(): int
}

'newpage

class Sale {

-saleId: int
-totalAmount: float
-paymentMethod: string
-saleDate: Date
-saleTime: Time
-quantity: int
-isVisit: bool
-transactionId: int

+setSaleId(id:int): void
+setAmount(amount: float): void
+setPaymentMethod(method: string): void
+setDate(date: Date): void
+setTime(time: Time): void
+setQuantity(qty: int): void
+setIsVisit(isVisit: bool): void
+setTransactionId(id: int): void
+getSaleId(): int
+getAmount(): float
+getPaymentMethod(): string
+getDate(): Date
+getTime(): Time
+getQuantity(): int
+getIsVisit(): Bool
+getTransactionId(): int
+load(): void


} 


class Buy {
-buyId: int
-totalAmount: float
-paymentMethod: string
-buyDate: Fecha
-buyTime: Time
-productId: int
-quantity: int
-transactionId: int 

+setBuyId(item:Inventory): void
+setAmount(importe: int): void
+setpaymentMethod (method : string): void
+setDate (date: Date):void
+setTime (time: Time): void
+setProductId (ProductId: int): void
+setQuantity(qty: int): void
+setTransactionId (id: int): void
+getBuyId(): int
+getTotalAmount(): float
+getPaymentMethod():string
+getbuyDate(): Date
+getbuyTime(): Time
+getProductId (): int
+getQuiantity (): int
+getTransaction (): int
+load(): void

}

class ItemSale {
 -productId: int
 -quantity: int
 -unitPrice: float
 -saleId: int

 +setProductId(productId: int): void
 +setQuantity(quantity int): void
 +setUnitPrice(total: float): void
 +setSaleId(saleId: int) void
 +getProductId(): int
 +getQuantity():int
 +getUnitPrice(): float
 +getSaleId(): int

 +load(): void
}

'newpage

Transaction <|-- Income
Transaction <|-- Expense

class Transaction {

-idTransaction: int
-date: Date
-time: Time
-description: string
-amount: float


+setIdTransaction(idTrx: int): void
+setDate(date: Date): void
+setTime (time : Time): void
+setDescription(desc: string): void
+setAmount(amount: float): void
+getIdTransaction(): int
+getDate(): Fecha
+getTime(): Time
+getDescription(): string
+getAmount(): float

}

class Income {

-saleId:int
-paymentMethod: string

+setSaleId(saleId int): void
+setpaymentMethod(method:string): void
+getSaleId():int
+getPaymentMethod(): string
}

class Expense {
	
-buyId: int
-paymentMethod: string


+setBuyId(id: int): void
+setPaymentMethod(method: string)
+getBuyId(): int
+getPaymentMethod(): string

}
@enduml